--- a/index.html
+++ b/index.html
@@ -1,80 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Pragyanpath – India Education</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PragyanPath – Free AI Education Platform</title>
+
+  <!-- SEO -->
+  <meta name="description" content="PragyanPath is a free AI-powered education platform for students from Class 1 to 12. Learn smart, learn free." />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
-
-  <!-- JS -->
-  <script src="assets/js/main.js" defer></script>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
-
 <body>
 
-<!-- ================= HEADER ================= -->
-<header class="top-header">
-  <div class="logo-box">
-    <!-- Yellow Bird Logo -->
-    <img src="assets/images/logo.png" alt="Pragyanpath Logo">
-    <span class="brand-name">Pragyanpath</span>
-  </div>
+  <!-- ================= NAVBAR ================= -->
+  <header class="navbar">
+    <div class="logo">PragyanPath</div>
+    <nav>
+      <a href="#classes">Classes</a>
+      <a href="#features">Features</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <a class="btn-primary" href="#start">Start Learning</a>
+  </header>
 
-  <div class="header-actions">
-    <a href="#" class="login-btn">Login</a>
-  </div>
-</header>
+  <!-- ================= HERO ================= -->
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Free AI Education for Every Student</h1>
+      <p>
+        Class 1 to 12 • Smart Learning • Simple Language • 100% Free
+      </p>
+      <a class="btn-primary" href="#classes">Explore Classes</a>
+      <a class="btn-secondary" href="#features">How it Works</a>
+    </div>
+    <div class="hero-image">
+      <img src="assets/images/hero.png" alt="AI Education" />
+    </div>
+  </section>
 
-<!-- ================= HERO SECTION ================= -->
-<section class="hero-section">
-  <h1>India’s Smart Learning Path</h1>
-  <p>
-    Board-wise education for Indian students  
-    <br>
-    CBSE • UP Board • NCERT • NEP  
-    <br>
-    Class 1 to 12
-  </p>
+  <!-- ================= WHY US ================= -->
+  <section class="why-us">
+    <h2>Why PragyanPath?</h2>
+    <div class="cards">
+      <div class="card">📘 Simple Language</div>
+      <div class="card">🤖 AI Powered Learning</div>
+      <div class="card">🎓 For All Boards</div>
+      <div class="card">💯 Completely Free</div>
+    </div>
+  </section>
 
-  <button class="primary-btn">Explore Pragyanpath</button>
-</section>
+  <!-- ================= CLASSES ================= -->
+  <section id="classes" class="classes">
+    <h2>Choose Your Class</h2>
+    <div class="class-grid">
+      <div class="class-card">Class 1 – 5</div>
+      <div class="class-card">Class 6 – 8</div>
+      <div class="class-card">Class 9 – 10</div>
+      <div class="class-card">Class 11 – 12</div>
+    </div>
+  </section>
 
-<!-- ================= FEATURES ================= -->
-<section class="features-section">
-  <h2>What You Will Get</h2>
+  <!-- ================= FEATURES ================= -->
+  <section id="features" class="features">
+    <h2>Smart Learning Features</h2>
+    <ul>
+      <li>✔ AI Generated Notes</li>
+      <li>✔ Board-wise Content</li>
+      <li>✔ Concept + Skills</li>
+      <li>✔ Mobile Friendly</li>
+    </ul>
+  </section>
 
-  <div class="features-grid">
-    <div class="feature-card">Board-wise Learning</div>
-    <div class="feature-card">Class 1 to 12 Content</div>
-    <div class="feature-card">Old & New Syllabus</div>
-    <div class="feature-card">NCERT & NEP Based</div>
-    <div class="feature-card">Simple Explanation</div>
-    <div class="feature-card">Regular Updates</div>
-  </div>
-</section>
+  <!-- ================= HOW IT WORKS ================= -->
+  <section class="how-it-works">
+    <h2>How It Works</h2>
+    <div class="steps">
+      <div>1️⃣ Choose Class</div>
+      <div>2️⃣ Select Subject</div>
+      <div>3️⃣ Learn with AI</div>
+    </div>
+  </section>
 
-<!-- ================= ABOUT ================= -->
-<section class="about-section">
-  <h2>About Pragyanpath</h2>
-  <p>
-    Pragyanpath is an Indian education platform designed to help students
-    learn according to their board and syllabus.  
-    Our focus is school education with clarity, simplicity, and updated content.
-  </p>
-</section>
+  <!-- ================= CTA ================= -->
+  <section id="start" class="cta">
+    <h2>Start Your Learning Journey Today</h2>
+    <a class="btn-primary" href="#">Get Started Free</a>
+  </section>
 
-<!-- ================= FOOTER ================= -->
-<footer class="site-footer">
-  <p>© 2026 Pragyanpath – India Education</p>
+  <!-- ================= FOOTER ================= -->
+  <footer class="footer">
+    <p>© 2026 PragyanPath. All Rights Reserved.</p>
+    <div class="footer-links">
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms</a>
+    </div>
+  </footer>
 
-  <div class="footer-links">
-    <a href="privacy.html">Privacy Policy</a>
-    <a href="terms.html">Terms & Conditions</a>
-    <a href="contact.html">Contact</a>
-  </div>
-</footer>
-
+  <!-- JS -->
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
