--- a/about.html
+++ b/about.html
@@ -1,74 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>About Us - Vishal Learning</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body{
-  font-family:Arial;
-  background:#f4f6f8;
-  margin:0;
-  padding:0;
-}
-header{
-  background:#0a58ca;
-  color:white;
-  padding:20px;
-  text-align:center;
-}
-section{
-  padding:20px;
-  max-width:800px;
-  margin:auto;
-  background:white;
-}
-footer{
-  background:#222;
-  color:white;
-  text-align:center;
-  padding:15px;
-  margin-top:30px;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About PragyanPath</title>
+  <meta name="description" content="Learn about PragyanPath, the free AI-powered education platform for students from Class 1 to 12.">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
+  <header class="navbar">
+    <div class="logo">PragyanPath</div>
+  </header>
 
-<header>
-<h1>About Us</h1>
-</header>
+  <main class="content">
+    <h1>About PragyanPath</h1>
+    <p>PragyanPath is a free, AI-powered education platform designed to make learning simple, fun, and accessible for students from Class 1 to 12. Our goal is to provide high-quality content for all boards in a simple language that students can easily understand.</p>
+    
+    <h2>Our Vision</h2>
+    <p>To empower every student with smart, interactive, and personalized learning tools without any cost.</p>
 
-<section>
-<p>
-<b>Vishal Learning</b> ek free education platform hai jo
-<b>Class 1 se Class 12</b> ke students ke liye banaya gaya hai.
-</p>
+    <h2>Our Mission</h2>
+    <ul>
+      <li>Provide clear, board-aligned educational content.</li>
+      <li>Use AI and smart technology to simplify learning.</li>
+      <li>Make learning accessible to all students, anywhere.</li>
+      <li>Keep content 100% safe, reliable, and free from ads.</li>
+    </ul>
+  </main>
 
-<p>
-Is website ka aim hai ki students ko
-<b>Physics, Chemistry, Math, Biology, Computer Science, Sanskrit aur Coding</b>
-jaise subjects ko simple aur easy language me samjhaya ja sake.
-</p>
-
-<p>
-Yeh website students ki
-<b>revision, concept clarity aur exam preparation</b>
-me madad karti hai.
-</p>
-
-<p>
-Future me hum is platform par aur bhi learning features
-add karne ka plan rakhte hain.
-</p>
-
-<p><b>Created by Vishal Shukla</b></p>
-</section>
-
-<footer>
-<p>© 2025 Vishal Learning | Powered by GitHub Pages</p>
-</footer>
-
+  <footer class="footer">
+    <a href="index.html">Home</a> |
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="contact.html">Contact</a>
+    <p>© 2026 PragyanPath</p>
+  </footer>
 </body>
 </html>
-Added About Us page
