--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Contact Us - Vishal Learning</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body{font-family:Arial;background:#f4f6f8;margin:0;padding:20px}
-h1{color:#0a58ca}
-.box{background:white;padding:20px;border-radius:8px}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact PragyanPath</title>
+  <meta name="description" content="Contact PragyanPath for support, queries, or suggestions regarding the free AI-powered education platform.">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
+  <header class="navbar">
+    <div class="logo">PragyanPath</div>
+  </header>
 
-<div class="box">
-<h1>Contact Us</h1>
+  <main class="content">
+    <h1>Contact Us</h1>
+    <p>If you have any questions, suggestions, or need support, feel free to reach out to us.</p>
 
-<p>
-Agar aapko Vishal Learning website se related koi suggestion, feedback ya query ho,
-to aap humse niche diye gaye email par contact kar sakte hain.
-</p>
+    <h2>Email</h2>
+    <p>support@pragyanpath.com</p>
 
-<p>
-📧 Email: <b>vishallearning@gmail.com</b>
-</p>
+    <h2>Feedback</h2>
+    <p>You can also send us your feedback about the app experience or educational content. We value every suggestion!</p>
+  </main>
 
-<p>
-Hum students ke feedback ko seriously lete hain aur website ko aur better banane ki koshish karte hain.
-</p>
-
-<a href="index.html">⬅ Back to Home</a>
-</div>
-
+  <footer class="footer">
+    <a href="index.html">Home</a> |
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="about.html">About</a>
+    <p>© 2026 PragyanPath</p>
+  </footer>
 </body>
 </html>
-Added Contact Us page
